@@ -1,0 +1,17 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 19:04:58 brook Exp $
+
+R_PKGNAME=	openssl
+R_PKGVER=	1.4.1
+CATEGORIES=	security
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Toolkit for encryption, signatures and certificates based on OpenSSL
+LICENSE=	mit
+
+DEPENDS+=	R-askpass>=1.1:../../security/R-askpass
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../security/openssl/buildlink3.mk"
+.include "../../mk/bsd.pkg.mk"
