@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3360 2019/08/09 19:04:10 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3361 2019/08/09 19:04:58 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5483,3 +5483,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added security/R-askpass version 1.1 [brook 2019-08-09]
 	Added sysutils/R-processx version 3.4.1 [brook 2019-08-09]
 	Added sysutils/R-xopen version 1.0.0 [brook 2019-08-09]
+	Added security/R-openssl version 1.4.1 [brook 2019-08-09]
